# tautcoin

./: .gitignore  INSTALL.md  Makefile.am  README.md  auto_install.sh  build-unix.md  configure.ac  how-to-be-a-miner-leader.md  imcoin.files  imcoin.includes  isono.io.files  isono.io.includes  tau.sh  taucoin.files  taucoin.includes
contrib/linearize/: linearize-hashes.py
contrib/spendfrom/: spendfrom.py
docs/: build-unix.md  how-to-be-a-miner-leader.md
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  clubman.cpp  clubman.h  coins.cpp  coins.h  coinsbyscript.cpp  coinsbyscript.h  compat.h  core_write.cpp  init.cpp  isndb.cpp  isndb.h  isnreward.h  isntest.cpp  main.cpp  main.h  miner.cpp  miner.h  net.cpp  netbase.cpp  netbase.h  (+23 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  (+1 more)
src/mysqlpp/: Bakefiles.bkgen  COPYING.txt  CREDITS.txt  ChangeLog  HACKERS.txt  INSTALL.txt  Makefile  Makefile.mysqlpp  README-Cygwin.txt  README-Linux.txt  README-Mac-OS-X.txt  README-MinGW.txt  README-Solaris.txt  README-Unix.txt  README-Visual-C++.txt  README-examples.txt  README.txt  RELEASE-CHECKLIST.txt  Wishlist  abi.xml.in  bk-deps  bmark.txt  bootstrap  bootstrap.bat  cleanmf  config.h.in  configure.ac  dtest  exrun  exrun.bat  install.hta.in  mysql++.bkl  mysql++.ebuild  mysql++.spec.in  osver  pretty.pl  rebake.bat  version.in
src/mysqlpp/config/: autoconf_inc.m4  libm.m4  localtime_r.m4  mysql_ssl.m4  socket_nsl.m4  stl_slist.m4
src/mysqlpp/doc/: README-devel-RPM.txt  README-manuals-RPM.txt  ssqls-pretty
src/mysqlpp/doc/userman/: Makefile  Makefile.hello.mingw  Makefile.hello.posix  breakages.dbx  common.xsl  configuration.dbx  fo.xsl  fo2pdf  html.xsl  incorporating.dbx  intro.dbx  licenses.dbx  mktxt  overview.dbx  section-template.dbx  ssqls.dbx  threads.dbx  tquery.dbx  tutorial.dbx  unicode.dbx  userman.dbx  userman.dbx.in  xinclude.mod
src/mysqlpp/examples/: .isndb.cpp.swp  \  cgi_jpeg.cpp  cpool.cpp  dbinfo.cpp  deadlock.cpp  fieldinf.cpp  for_each.cpp  images.h  isndb.cpp  isndb.h  isnreward.h  isntest.cpp  load_jpeg.cpp  multiquery.cpp  printdata.cpp  printdata.h  resetdb.cpp  simple1.cpp  simple2.cpp  simple3.cpp  ssqls1.cpp  ssqls2.cpp  ssqls3.cpp  ssqls4.cpp  ssqls5.cpp  ssqls6.cpp  stock.h  stock.txt  store_if.cpp  threads.h  tquery1.cpp  tquery2.cpp  tquery3.cpp  tquery4.cpp  transaction.cpp
src/mysqlpp/examples/vstudio/mfc/: mfc.cpp  mfc.h  mfc.rc  mfc_dlg.cpp  mfc_dlg.h  resource.h  stdafx.h
src/mysqlpp/examples/vstudio/wforms/: AssemblyInfo.cpp  MainForm.h  MainForm.resX  wforms.cpp
src/mysqlpp/lib/: autoflag.h  common.h  dbdriver.cpp  field_types.cpp  mysql++.cpp  query.cpp  result.cpp  scopedconnection.cpp  sql_buffer.cpp  sqlstream.cpp  ssqls2.cpp  utility.cpp  vallist.cpp
src/mysqlpp/ssx/: Doxyfile.in  genv2.cpp  genv2.h  main.cpp  parsev2.cpp  parsev2.h
src/mysqlpp/test/: array_index.cpp  cpool.cpp  datetime.cpp  insertpolicy.cpp  inttypes.cpp  manip.cpp  null_comparison.cpp  null_uniqueness.cpp  qssqls.cpp  qstream.cpp  query_copy.cpp  sqlstream.cpp  ssqls2.cpp  string.cpp  tcp.cpp  uds.cpp  wnp.cpp
(+239 files in other folders)
